# passwd-rs

./: .gitignore  Cargo.toml  README.md
src/: group.rs  lib.rs  shadow.rs  user.rs
